--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "text": "description",
   "send": "send",
   "delete-checked": "delete checked",
-  "delete": "delete"
+  "delete": "delete",
+  "edit": "edit",
+  "confirm": "confirm"
 }
