--- a/frontend/public/locales/de/translation.json
+++ b/frontend/public/locales/de/translation.json
@@ -1,7 +1,7 @@
 {
 "title": "Titel",
   "text": "Beschreibung",
-  "send": "Aufgabe hinzufügen",
+  "send": "senden",
   "delete-checked": "Lösche erledigte Einträge",
   "delete": "Löschen",
   "edit": "Ändern",
